--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -20,6 +20,7 @@
 @import './components/terminal.css';
 @import './components/color-selector.css';
 @import './components/folder-dialog.css';
+@import './components/animated-themes.css';
 
 
 /* --- Pages --- */
